# nodewatts

./: .gitignore  .gitmodules  MANIFEST.in  README.md  config.json  setup.cfg  smartwatts-autoconfig.sh  viz_config.json
nodewatts/: __init__.py  __main__.py  cgroup.py  config.py  db.py  error.py  profiler_handler.py  sensor_handler.py  singleton.py  smartwatts.py  subprocess_manager.py
nodewatts/config/: hwpc_config.json  smartwatts_config.json
nodewatts/nwengine/: __main__.py  config.py  cpu_profile.py  db.py  power_profile.py  report.py
nodewatts/visualizer/: asset-manifest.json  index.html
nodewatts/visualizer/static/css/: main.553ddc1f.css  main.553ddc1f.css.map  main.922c047a.css.map  main.e35973ab.css  main.e35973ab.css.map
nodewatts/visualizer/static/js/: main.62344151.js.map  main.8d832379.js  main.8d832379.js.map  main.d9b9de83.js  main.d9b9de83.js.map
nodewatts/viz_server/: server.py
nwengine/: __main__.py  config.py  db.py  log.py  power_profile.py
resources/config/: hwpc_config.json
resources/javascript/nodewatts_cpu_profile_db/: package.json
resources/javascript/nodewatts_profiler_agent/: es6-imports.js  profiler-socket.js  test-runner.js
resources/visualizer/: asset-manifest.json  index.html
resources/visualizer/static/css/: main.922c047a.css  main.ce815cef.css  main.ce815cef.css.map
resources/visualizer/static/js/: main.1ad97494.js  main.1ad97494.js.map  main.62344151.js
smartwatts/: LICENSE  __main__.py  formula.py
