[metadata]
name = nodewatts
version = attr: nodewatts.__version__
description = Nodewatts is tool for identifying energy hotpots in nodejs servers
long_description = file: README.md
keywords = energy, nodejs, server, performance counters, profiler
author = Jack Leyland
author_email='jackjleyland@gmail.com',
url='https://github.com/jack-leyland/nodewatts',
license = MIT License
classifiers =
    Programming Language :: Python :: 3.10 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
zip_safe = False
include_package_data = True
python_requires = ~= 3.10
packages = find:
test_suite = tests
install_requires =
    scikit-learn
    numpy >=1.11.O
    thespian == 3.10.0
    influxdb-client >= 1.30.0
    networkx~=2.8.4
    pymongo~=4.1.1