[metadata]
name = nodewatts
version = attr: nodewatts.__version__
description = Nodewatts is tool for identifying energy hotpots in nodejs servers
long_description = file: README.md
keywords = energy, nodejs, server, performance counters, profiler
author = Jack Leyland
author_email='jackjleyland@gmail.com',
url='https://github.com/jack-leyland/nodewatts',
license = MIT License
classifiers =
    Programming Language :: Python :: 3.10 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
zip_safe = False
include_package_data = True
python_requires = ~= 3.10
packages = find:
test_suite = tests
install_requires =
    attrs~=21.4.0
    certifi~=2022.6.15
    cgroupspy~=0.2.2
    click~=8.1.3
    Flask~=2.1.3
    influxdb-client~=1.30.0
    itsdangerous~=2.1.2
    Jinja2~=3.1.2
    joblib~=1.1.0
    jsonschema~=4.7.2
    MarkupSafe~=2.1.1
    networkx~=2.8.5
    numpy~=1.23.1
    psutil~=5.9.1
    pymongo~=4.1.1
    pyrsistent~=0.18.1
    python-dateutil~=2.8.2
    Rx~=3.2.0
    scikit-learn~=1.1.1
    scipy~=1.8.1
    six~=1.16.0
    thespian~=3.10.0
    threadpoolctl~=3.1.0
    urllib3~=1.26.10
    Werkzeug~=2.2.0
    Flask-Cors~=3.0.10
